src/test/ui/feature-gate-wasm_import_module.stderr
error[E0658]: experimental attribute (see issue #51088)
  --> $DIR/feature-gate-wasm_import_module.rs:11:1
   |
LL | #[wasm_import_module = "test"] //~ ERROR: experimental
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(wasm_import_module)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
